[project]
name = "leave-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-security-too>=5.7.1",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
